# qlc3d

./: .gitignore  .gitmodules  CMakeLists.txt  DEVELOPMENT.md  README.md  readme.txt
.github/: copilot-instructions.md
doc-impl/: algorithm-flow.md  mesh-refinement.md  quadratic-elements.md  regular-grid.md
examples/: README.md
examples/meshes/: thin1d.msh
examples/pseudo-2d-gmsh/: geometry.geo  geometry.msh  pseudo-2d.md  settings.txt
examples/steady-state-switching-1d/: README.md  run.py  settings.txt
examples/switching-dynamics-1d/: README.md  run.py  settings.txt
qlc3d/: .gitignore  CMakeLists.txt  TODO.txt  makefile  makefile.def  makefile_noqt  solver.qfg  solver.txt
qlc3d/doc/: README.md  SettingsFileManual.odt  mesh.md
qlc3d/includes/: alignment.h  assembleq2k.h  box.h  calcpot3d.h  configuration.h  dofmap.h  electrodes.h  energy.h  energy_calculation_macros.h  eventhandler.h  eventlist.h  expression.h  extras.h  filesysfun.h  fixednodes.h  gauss.h  geometry.h  globals.h  inits.h  lc-representation.h  lc.h  line.h  material_numbers.h  matlabiofun.h  mesh.h  mesh.old.h  meshrefinement.h  old_reader.h  qassembly_macros.h  qlc3d.h  reader.h  refinement.h  refinfo.h  regulargrid-factory.h  regulargrid.h  resultio.h  resultoutput.h  settings-reader.h  settings.h  settings_file_keys.h  (+16 more)
qlc3d/includes/fe/: fe-util.h  gaussian-quadrature.h  keast.h  shapefunction2d.h  shapefunction3d.h
qlc3d/includes/geom/: aabox.h  coordinates.h  element-split.h  periodicity.h  tet-mesh-search.h  vec3.h
qlc3d/includes/io/: gmsh-read.h  lcview-result-output.h  matlabiofun.h  meshreader.h  result-output.h  vtkiofun.h
qlc3d/includes/lc/: lc-energy-terms.h  lc-solver.h  steady-state-lc-solver.h  time-stepping-lc-solver.h
qlc3d/includes/mesh/: element-split-convert.h  element-split.h  mesh.h
qlc3d/includes/potential/: potential-solver.h
qlc3d/includes/refinement/: element-selector.h  midpoint-node-lookup.h  periodic-edge-expander.h  q-tensor-interpolator.h  refinement-spec.h  tet-classifier.h  tet-splitter.h
qlc3d/includes/util/: containerutil.h  exception.h  hash.h  logging.h  randomgenerator.h  stopwatch.h  stringutil.h
qlc3d/meshes/: test.txt~
qlc3d/src/: Qasm.cpp  ReadGiDMesh3D.cpp  alignment.cpp  alignmentlayers.cpp  assembleQ.cpp  assembleQ.cpp_backup  assembleq2k.cpp  autorefinement.cpp  box.cpp  calcQ3d.cpp  calcQexplicit.cpp  calcpot.cpp  calcpot3d.cpp  configuration.cpp  createsparsematrix.cpp  dcg.cpp  dofmap.cpp  electrodes.cpp  endrefinement.cpp  energy.cpp  eventhandler.cpp  eventlist.cpp  expression.cpp  extras.cpp  filesysfun.cpp  find_periodic_nodes.cpp  findrefelems.cpp  fixednodes.cpp  geometry.cpp  gmsh-read.cpp  init_shape.cpp  inits.cpp  lc-representation.cpp  lc.cpp  line.cpp  main-app-qlc3d.cpp  makefile  matlabiofun.cpp  mesh.cpp  meshrefinement.cpp  (+40 more)
qlc3d/src/geom/: coordinates.cpp  element-split.cpp  periodicity.cpp  tet-mesh-search.cpp
qlc3d/src/io/: ReadGiDMesh3D.cpp  gmsh-read.cpp  lcview-result-output.cpp  matlabiofun.cpp  meshreader.cpp  result-output.cpp  vtkiofun.cpp  writeLCD.cpp
qlc3d/src/lc/: lc-solver.cpp  time-stepping-lc-solver.cpp
qlc3d/src/mesh/: element-split-convert.cpp  element-split.cpp  mesh.cpp
qlc3d/src/potential/: calcpot3d.cpp  potential-solver.cpp
qlc3d/src/refinement/: element-selector.cpp  midpoint-node-lookup.cpp  periodic-edge-expander.cpp  q-tensor-interpolator.cpp  refinement-spec.cpp  tet-classifier.cpp  tet-splitter.cpp
qlc3d/src/util/: logging.cpp  stringutil.cpp
tests/: CMakeLists.txt  configuration-tests.cpp  cpp-test.cpp  dofmap-tests.cpp  math-tests.cpp  meshio-tests.cpp  reader-test.cpp  temp-test.cpp  temp_test.cpp  vtk-unstructured-grid-writer-tests.cpp
tests/cpp/: adaptive-time-step-tests.cpp  alignment-tests.cpp  configuration-tests.cpp  dofmap-tests.cpp  expression-tests.cpp  init-events-tests.cpp  init-geometry-tests.cpp  initial-lc-orientation-tests.cpp  math-tests.cpp  meshrefinement-config-tests.cpp  meshrefinement-test.cpp  reader-tests.cpp  sparsematrix-tests.cpp
tests/cpp/fe/: gaussian-integration-tests.cpp
tests/cpp/geom/: element-split-tests.cpp  geom-tests.cpp  periodicity-tests.cpp  tet-mesh-search-tests.cpp
tests/cpp/io/: gmsh-read-test.cpp  meshio-tests.cpp  meshreader-test.cpp  reader-test.cpp  result-output-test.cpp  vtk-unstructured-grid-writer-tests.cpp
tests/cpp/lc/: lc-solver-tests.cpp
tests/cpp/mesh/: element-split-convert-tests.cpp  element-split-tests.cpp  mesh-tests.cpp
tests/cpp/potential/: potential-solver-test.cpp
tests/cpp/refinement/: element-selector-tests.cpp  midpoint-node-lookup-tests.cpp  periodic-edge-expander-tests.cpp  q-tensor-interpolator-tests.cpp  refinement-event-tests.cpp  refinement-spec-tests.cpp  tet-classifier-tests.cpp  tet-splitter-tests.cpp
tests/python/: e2e.py  e2e_1d-cell-switching.py  e2e_single-newton-iteration.py  qlc3d_test_utils.py
tests/resources/: gmsh-small-cube-quadratic.msh  gmsh-small-cube.msh  mesh1d-periodic-quadratic.msh  pseudo-2d-neumann-quadratic.msh  pseudo-2d-neumann.msh  settings-switch-1d.txt  settings.txt  unit-cube-dielectric-neumann-quadratic.msh  unit-cube-dielectric-neumann.msh  unit-cube-fully-periodic-linear-gmsh.msh  unit-cube-neumann-quadratic.msh  unit-cube-neumann.msh
tests/testutil/: CMakeLists.txt  test-util.cpp  test-util.h
